# commit-message-chatbot

./: .gitignore  README.md  pyproject.toml
src/commit_messenger/: config.yml  main.py
src/commit_messenger/chatbot/: chatbot_utils.py
src/commit_messenger/git_utils/: git_utils.py
src/commit_messenger/utils/: utils.py
tests/chatbot_tests/: test_chatbot_class.py
tests/config_tests/: duplicate_file_for_config_testing.py  file_that_should_be_ignored.py  test_config_duplicate_files.py  test_config_duplicate_files.yaml  test_config_files_should_be_ignored.py  test_config_files_should_be_ignored.yaml  test_config_keys.py  test_config_keys.yaml
tests/config_tests/subdir_for_testing/: duplicate_file_for_config_testing.py
