[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-messenger"
requires-python = ">=3.11.9"
version = "1.0.0"
dependencies = [
"GitPython>=3.1.45"
]
authors=[{name= "Bastian Dupoirieux", email = "bast.dupo@gmail.com"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/chatbot_tests", "tests/config_tests"]